@@ -24,8 +24,10 @@
 
 ;;; Code:
 
-(defconst mime-library-product ["FLIM" (1 10 2) "Kintetsu-Miyazu"]
-  "Product name, version number and code name of MIME-library package.")
+(eval-and-compile
+  (defconst mime-library-product ["FLIM" (1 10 2) "Kintetsu-Miyazu"]
+    "Product name, version number and code name of MIME-library package.")
+  )
 
 (defmacro mime-product-name (product)
   `(aref ,product 0))
