@@ -1,3 +1,11 @@
+1998-10-09  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-def.el (mime-library-product): Enclose with
+	`eval-and-compile'.
+
+	* FLIM-CFG: Add "custom" to load-path.
+
+
 1998-10-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* FLIM: Version 1.10.2 (Kintetsu-Miyazu) was released.
